--- a/project.html
+++ b/project.html
@@ -23,7 +23,7 @@
        function draw(){
 	translate(mouseX, mouseY);
  	rotate(radians(frameCount));
- 	//allows for the shape to move arounf the mouse
+ 	//allows for the shape to move around the mouse
  	
 	strokeWeight(2.0)
 	stroke(random(0,200),random(0,200),random(0,200))
