--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
        function setup(){
 	createCanvas(400, 400);
        }
-	function keyPressed(){
+	function mouseMoved(){
 	    something +=10//increases size
 	             
 	}
